fix(abstract&elaborate): rename add fix a bug about scale clamp

--- a/abstract&elaborate/details-on-demand/overview&detail.html
+++ b/abstract&elaborate/details-on-demand/overview&detail.html
@@ -43,7 +43,7 @@ const domainPrice = [0, d3.max(data, (d) => d.price)];
 const scaleXTop = d3.scaleTime()
                     .domain(d3.extent(data, (d) => d.date))
                     .range([0, width])
-                    .clamp(domainPrice);
+                    .clamp(true);
 const scaleXBottom = d3.scaleTime()
                     .domain(d3.extent(data, (d) => d.date))
                     .range([0, width]);
