refactor: unify the format of examples

--- a/abstract&elaborate/details-on-demand/collapsible-tree.html
+++ b/abstract&elaborate/details-on-demand/collapsible-tree.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1>Collapsible Treee</h1>
+  <h1>Collapsible Tree</h1>
   <a href="https://observablehq.com/@d3/collapsible-tree">source</a>
   <br>
   <br>
