--- a/abstract&elaborate/zooming/zoomable-scatter-plot.html
+++ b/abstract&elaborate/zooming/zoomable-scatter-plot.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+  <meta charset="utf-8">
+  <title>Zoomable Scatter Plot</title>
+</head>
 <body>
-    <a href="https://vega.github.io/vega/examples/zoomable-scatter-plot/">出处</a>
-    <meta charset="utf-8">
-    <svg width="500" height="500"></svg>
+    <h1>Zoomable Scatter Plot</h1>
+    <a href="https://vega.github.io/vega/examples/zoomable-scatter-plot/">source</a>
+    <br>
+    <br>
+    <br>
+    <svg width="600" height="600"></svg>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script>
     
