--- a/reconfigure/baseline-adjustment/streamgraph-transitions.html
+++ b/reconfigure/baseline-adjustment/streamgraph-transitions.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>title</title>
+  <title>Streamgraph Transitions</title>
 </head>
 
 <body>
-  <h1>title</h1>
-  <a href="#">source</a>
+  <h1>Streamgraph Transitions</h1>
+  <a href="https://observablehq.com/@d3/streamgraph-transitions">source</a>
   <br>
   <br>
   <br>
