--- a/filter/brush-filter.html
+++ b/filter/brush-filter.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <title>brush.filter</title>
 </head>
 <body>
   <h1>brush.filter</h1>
@@ -17,6 +18,8 @@
     const rx = d3.randomUniform(0, width);
     const ry = d3.randomUniform(0, height);
     const svg = d3.select("svg")
+                    .attr("width", width)
+                    .attr("height", height)
                     .attr("viewBox", [0, 0, width, height]);
     const brush = d3.brush()
         .filter(event => !event.ctrlKey
