--- a/reconfigure/jitter/scatterplot-overplotting.html
+++ b/reconfigure/jitter/scatterplot-overplotting.html
@@ -9,18 +9,24 @@
 <body>
   <h1>Scatterplot Overplotting</h1>
   <a href="https://observablehq.com/@john-guerra/overlapping-scatterplots">source</a>
+  <br>
+  <br>
+  <br>
   <div>
     <form onInput="result.value=parseFloat(inputRadius.value); radiusInputListener(result.value)">
+      <b style="font-size: small;">radius</b><br>
       <input type="range" id="inputRadius" name="inputRadius" min=1 max=50 value=10 step=0.01>
       <output name="result" for="inputRaidus">10</output>
     </form>
   </div>
   <div>
     <form onInput="result.value=parseFloat(inputJitter.value); jitterInputListener(result.value)">
+      <b style="font-size: small;">Amount of jitter</b><br>
       <input type="range" id="inputJitter" name="Amount of jitter" min=1 max=47.7 value=1 step=0.01>
       <output name="result" for="inputJitter">1</output>
     </form>
   </div>
+  <br>
   <svg></svg>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
@@ -29,7 +35,7 @@
       y: Math.floor(Math.random() * 5) + 1,
     }))
 
-    const width = 1000;
+    const width = 1200;
     const iwidth = width / 2;
     const height = iwidth * 0.7;
     const margin = ({ top: 20, right: 30, bottom: 30, left: 40 })
