display "reconfigure" examples without img

--- a/index.html
+++ b/index.html
@@ -47,9 +47,45 @@
       <section class="interaction-catogory">
         <h2 class="interaction-title">Reconfigure</h2>
         <article class="example">
-          <a href="">
+          <a href="reconfigure\baseline-adjustment\streamgraph-transitions.html">
+            <img class="example-img" src="streamgraph-transition.gif">
+            <h3 class="example-title">Baseline Ajustment</h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="reconfigure\changing-axis\scatter-plot-null-values.html">
             <img class="example-img" src="">
-            <h3 class="example-title"></h3>
+            <h3 class="example-title">Changing Axis</h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="reconfigure\jitter\scatterplot-overplotting.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Jitter</h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="reconfigure\move-data-items\disjoint-force-directed-graph.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Move Data Items</h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="reconfigure\rotate\rotate-the-earth.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Rotate the Earth</h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="reconfigure\sorting-and-rearranging-columns\sortable-bar-chart.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Sortable Bar Chart</h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="reconfigure\sorting-and-rearranging-columns\top-k-plot-with-others.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Top K Plot</h3>
           </a>
         </article>
       </section>
@@ -57,15 +93,39 @@
       <section class="interaction-catogory">
         <h2 class="interaction-title">Encode</h2>
         <article class="example">
-          <a href="">
+          <a href="encode\colour-schemes.html">
             <img class="example-img" src="">
-            <h3 class="example-title"></h3>
+            <h3 class="example-title">Change Colour Schemes</h3>
           </a>
         </article>
       </section>
       <br>
       <section class="interaction-catogory">
         <h2 class="interaction-title">Abstract/Elaborate</h2>
+        <article class="example">
+          <a href="">
+            <img class="example-img" src="">
+            <h3 class="example-title"></h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="">
+            <img class="example-img" src="">
+            <h3 class="example-title"></h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="">
+            <img class="example-img" src="">
+            <h3 class="example-title"></h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="">
+            <img class="example-img" src="">
+            <h3 class="example-title"></h3>
+          </a>
+        </article>
         <article class="example">
           <a href="">
             <img class="example-img" src="">
