--- a/index.html
+++ b/index.html
@@ -109,27 +109,27 @@
           </a>
         </article>
         <article class="example">
-          <a href="">
+          <a href="abstract&elaborate\details-on-demand\collapsible-tree.html">
             <img class="example-img" src="">
-            <h3 class="example-title"></h3>
+            <h3 class="example-title">Collapsible Tree</h3>
           </a>
         </article>
         <article class="example">
-          <a href="">
+          <a href="abstract&elaborate\details-on-demand\overview-and-detail.html">
             <img class="example-img" src="">
-            <h3 class="example-title"></h3>
+            <h3 class="example-title">Overview And Detail</h3>
           </a>
         </article>
         <article class="example">
-          <a href="">
+          <a href="abstract&elaborate\details-on-demand\zoomable-sunburst.html">
             <img class="example-img" src="">
-            <h3 class="example-title"></h3>
+            <h3 class="example-title">Zoomable Sunburst</h3>
           </a>
         </article>
         <article class="example">
-          <a href="">
+          <a href="abstract&elaborate\zooming\zoomable-scatter-plot.html">
             <img class="example-img" src="">
-            <h3 class="example-title"></h3>
+            <h3 class="example-title">Zoomable Scatter Plot</h3>
           </a>
         </article>
       </section>
@@ -142,14 +142,26 @@
             <h3 class="example-title"></h3>
           </a>
         </article>
+        <article class="example">
+          <a href="filter\brush-filter.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Brush Filter</h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="filter\brushing-scatter-plots.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Brushing Scatter Plots</h3>
+          </a>
+        </article>
       </section>
       <br>
       <section class="interaction-catogory">
         <h2 class="interaction-title">Connect</h2>
         <article class="example">
-          <a href="">
+          <a href="filter\interactive-legend.html">
             <img class="example-img" src="">
-            <h3 class="example-title"></h3>
+            <h3 class="example-title">Interactive Legend</h3>
           </a>
         </article>
       </section>
