fix: remove empty examples, add new examples to display

--- a/index.html
+++ b/index.html
@@ -103,12 +103,6 @@
       <section class="interaction-catogory">
         <h2 class="interaction-title">Abstract/Elaborate</h2>
         <article class="example">
-          <a href="">
-            <img class="example-img" src="">
-            <h3 class="example-title"></h3>
-          </a>
-        </article>
-        <article class="example">
           <a href="abstract&elaborate\details-on-demand\collapsible-tree.html">
             <img class="example-img" src="">
             <h3 class="example-title">Collapsible Tree</h3>
@@ -132,14 +126,20 @@
             <h3 class="example-title">Zoomable Scatter Plot</h3>
           </a>
         </article>
+        <article class="example">
+          <a href="abstract&elaborate\zooming\seamless-zoomable-map-tiles.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Seamless Zoomable Map Tiles</h3>
+          </a>
+        </article>
       </section>
       <br>
       <section class="interaction-catogory">
         <h2 class="interaction-title">Filter</h2>
         <article class="example">
-          <a href="">
+          <a href="filter\interactive-legend.html">
             <img class="example-img" src="">
-            <h3 class="example-title"></h3>
+            <h3 class="example-title">Interactive Legend</h3>
           </a>
         </article>
         <article class="example">
@@ -159,9 +159,15 @@
       <section class="interaction-catogory">
         <h2 class="interaction-title">Connect</h2>
         <article class="example">
-          <a href="filter\interactive-legend.html">
+          <a href="connect\edge-bundling.html">
             <img class="example-img" src="">
-            <h3 class="example-title">Interactive Legend</h3>
+            <h3 class="example-title">Edge Bundling</h3>
+          </a>
+        </article>
+        <article class="example">
+          <a href="connect\brushing-scatter-plots.html">
+            <img class="example-img" src="">
+            <h3 class="example-title">Brushing Scatter Plots</h3>
           </a>
         </article>
       </section>
