add gifs for all examples

--- a/index.html
+++ b/index.html
@@ -48,43 +48,43 @@
         <h2 class="interaction-title">Reconfigure</h2>
         <article class="example">
           <a href="reconfigure\baseline-adjustment\streamgraph-transitions.html">
-            <img class="example-img" src="streamgraph-transition.gif">
+            <img class="example-img" src="./reconfigure/baseline-adjustment/streamgraph-transitions.gif">
             <h3 class="example-title">Baseline Ajustment</h3>
           </a>
         </article>
         <article class="example">
           <a href="reconfigure\changing-axis\scatter-plot-null-values.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="reconfigure\changing-axis\scatter-plot-null-values.gif">
             <h3 class="example-title">Changing Axis</h3>
           </a>
         </article>
         <article class="example">
           <a href="reconfigure\jitter\scatterplot-overplotting.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="reconfigure\jitter\scatterplot-overplotting.gif">
             <h3 class="example-title">Jitter</h3>
           </a>
         </article>
         <article class="example">
           <a href="reconfigure\move-data-items\disjoint-force-directed-graph.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="reconfigure\move-data-items\disjoint-force-directed-graph.gif">
             <h3 class="example-title">Move Data Items</h3>
           </a>
         </article>
         <article class="example">
           <a href="reconfigure\rotate\rotate-the-earth.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="reconfigure\rotate\rotate-the-earth.gif">
             <h3 class="example-title">Rotate the Earth</h3>
           </a>
         </article>
         <article class="example">
           <a href="reconfigure\sorting-and-rearranging-columns\sortable-bar-chart.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="reconfigure\sorting-and-rearranging-columns\sortable-bar-chart.gif">
             <h3 class="example-title">Sortable Bar Chart</h3>
           </a>
         </article>
         <article class="example">
           <a href="reconfigure\sorting-and-rearranging-columns\top-k-plot-with-others.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="reconfigure\sorting-and-rearranging-columns\top-k-plot-with-others.gif">
             <h3 class="example-title">Top K Plot</h3>
           </a>
         </article>
@@ -94,7 +94,7 @@
         <h2 class="interaction-title">Encode</h2>
         <article class="example">
           <a href="encode\colour-schemes.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="encode\colour-schemes.gif">
             <h3 class="example-title">Change Colour Schemes</h3>
           </a>
         </article>
@@ -104,31 +104,31 @@
         <h2 class="interaction-title">Abstract/Elaborate</h2>
         <article class="example">
           <a href="abstract&elaborate\details-on-demand\collapsible-tree.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="abstract&elaborate\details-on-demand\collapsible-tree.gif">
             <h3 class="example-title">Collapsible Tree</h3>
           </a>
         </article>
         <article class="example">
           <a href="abstract&elaborate\details-on-demand\overview-and-detail.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="abstract&elaborate\details-on-demand\overview-and-detail.gif">
             <h3 class="example-title">Overview And Detail</h3>
           </a>
         </article>
         <article class="example">
           <a href="abstract&elaborate\details-on-demand\zoomable-sunburst.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="abstract&elaborate\details-on-demand\zoomable-sunburst.gif">
             <h3 class="example-title">Zoomable Sunburst</h3>
           </a>
         </article>
         <article class="example">
           <a href="abstract&elaborate\zooming\zoomable-scatter-plot.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="abstract&elaborate\zooming\zoomable-scatter-plot.gif">
             <h3 class="example-title">Zoomable Scatter Plot</h3>
           </a>
         </article>
         <article class="example">
           <a href="abstract&elaborate\zooming\seamless-zoomable-map-tiles.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="abstract&elaborate\zooming\seamless-zoomable-map-tiles.gif">
             <h3 class="example-title">Seamless Zoomable Map Tiles</h3>
           </a>
         </article>
@@ -138,19 +138,19 @@
         <h2 class="interaction-title">Filter</h2>
         <article class="example">
           <a href="filter\interactive-legend.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="filter\interactive-legend.gif">
             <h3 class="example-title">Interactive Legend</h3>
           </a>
         </article>
         <article class="example">
           <a href="filter\brush-filter.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="filter\brush-filter.gif">
             <h3 class="example-title">Brush Filter</h3>
           </a>
         </article>
         <article class="example">
           <a href="filter\brushing-scatter-plots.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="filter\brushing-scatter-plots.gif">
             <h3 class="example-title">Brushing Scatter Plots</h3>
           </a>
         </article>
@@ -160,13 +160,13 @@
         <h2 class="interaction-title">Connect</h2>
         <article class="example">
           <a href="connect\edge-bundling.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="connect\edge-bundling.gif">
             <h3 class="example-title">Edge Bundling</h3>
           </a>
         </article>
         <article class="example">
           <a href="connect\brushing-scatter-plots.html">
-            <img class="example-img" src="">
+            <img class="example-img" src="connect\brushing-scatter-plots.gif">
             <h3 class="example-title">Brushing Scatter Plots</h3>
           </a>
         </article>
