change the map api of seamless-zoomable-map-tiles example

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <h3 class="example-title">Zoomable Scatter Plot</h3>
           </a>
         </article>
+        <article class="example">
+          <a href="explore/seamless-zoomable-map-tiles.html">
+            <img class="example-img" src="explore/seamless-zoomable-map-tiles.gif">
+            <h3 class="example-title">Seamless Zoomable Map Tiles</h3>
+          </a>
+        </article>
       </section>
       <br>
       <section class="interaction-catogory">
