--- a/abstract&elaborate/zooming/seamless-zoomable-map-tiles.html
+++ b/abstract&elaborate/zooming/seamless-zoomable-map-tiles.html
@@ -21,7 +21,8 @@
     const showlayers = false;
     // Kartendaten: © [OpenStreetMap](https://openstreetmap.org/copyright)-Mitwirkende, SRTM | Kartendarstellung: © [OpenTopoMap](http://opentopomap.org/) (CC-BY-SA)
     const deltas = [-100, -4, -1, 0]
-    const url = (x, y, z) => `https://tile.opentopomap.org/${z}/${x}/${y}.png`
+    //const url = (x, y, z) => `https://tile.opentopomap.org/${z}/${x}/${y}.png`
+    const url = (x, y, z) => `https://api.mapbox.com/v4/mapbox.satellite/${z}/${x}/${y}.png?access_token=pk.eyJ1IjoidmlydXNwYyIsImEiOiJja2xjZ3ljcGQwcDRiMnBwMGY5cGl6M2wzIn0.fjAvh4hJmiB-aG5pzNzJpw`
     let transform = d3.zoomIdentity.translate(width >> 1, height >> 1).scale(1 << 12)
     
     const svg = d3.select("svg").attr("width", width).attr("height", height).attr("viewBox", [0, 0, width, height])
